--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ build.gradle
 gradlew
 gradlew.bat
 settings.gradle
+Simple Tic-Tac-Toe/Fight
+Simple Tic-Tac-Toe/First move
+Simple Tic-Tac-Toe/gamemaster
+Simple Tic-Tac-Toe/battlefield
+Simple Tic-Tac-Toe/field
