--- a/Simple Tic-Tac-Toe/Fight/task-info.yaml
+++ b/Simple Tic-Tac-Toe/Fight/task-info.yaml
@@ -442,8 +442,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/10479#comment
-status: Failed
+status: Solved
 feedback:
-  message: Compilation Failed
-  time: "Tue, 28 Mar 2023 21:32:00 UTC"
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Tue, 04 Apr 2023 18:02:26 UTC"
 record: -1
